# static-site

./: .gitmodules  README.md  default.nix  rib-sample.cabal  shell.nix  site.nix  static-site.cabal
.github/workflows/: ci.yaml
content/: me.md  org-post.org  resume.dhall
content/posts/: first-post.md
nixops/: simple-ec2.nix  simple-vbox.nix  simple.nix
src/: Main.hs
