cabal-version: 2.4
name:          static-site
version:       0.1.0.0
license:       BSD-3-Clause
author:        Your Name
maintainer:    your@email
category:      Web

executable static-site
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base
                  , aeson
                  , clay
                  , dhall-resume
                  , filepath
                  , lens
                  , lucid
                  , rib          ^>= 0.9
                  , shake
                  , text
                  , with-utf8
  default-language: Haskell2010
  ghc-options:      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
